--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"next": "14.1.0",
 		"react": "^18.3",
 		"react-dom": "^18.3",
-		"thirdweb": "^5"
+		"thirdweb": "5.86.3",
+		"@abstract-foundation/agw-react": "1.4.2"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
